--- a/src/app/pages/admin-page/gallery/gallery.component.scss
+++ b/src/app/pages/admin-page/gallery/gallery.component.scss
@@ -1,5 +1,6 @@
 .nav-tabs-custom {
     .nav-tabs {
+        cursor: pointer;
         li {
             margin-right: 30px;
             height: 40px;
@@ -14,5 +15,15 @@
 
     .tab-content {
         background: #f2f2f2 !important;
+
+        .input-row {
+            label {
+                margin: auto 0;
+                height: 100%;
+                font-weight: bold;
+                font-size: 1vw;
+            }
+        }
+        
     }
 }
