--- a/src/app/pages/admin-page/gallery/gallery.component.html
+++ b/src/app/pages/admin-page/gallery/gallery.component.html
@@ -62,7 +62,8 @@
                         <tr>
                           <th>No</th>
                           <th>Judul Video</th>
-                          <th></th>
+                          <th>Tampilkan/Tidak</th>
+                          <th></th>                          
                         </tr>
                       </thead>
                       <tbody>
@@ -72,6 +73,13 @@
                             <a href="https://youtube.com/watch?v={{video.url}}">
                               {{video.title}}
                             </a>
+                          </td>
+                          <td>
+                            <!-- Rounded switch -->
+                            <label class="switch">
+                              <input type="checkbox" [(ngModel)]="video.status" (change)="updateVideoStatus(video._id, video.status)" />
+                              <span class="slider round"></span>
+                            </label>
                           </td>
                           <td>
                             <a class="btn btn-danger" (click)="deleteVideo(video._id)">
@@ -144,8 +152,7 @@
                         <tr>
                           <th>No</th>
                           <th>Judul Foto</th>
-                          <th>Kategori</th>
-                          <th></th>
+                          <th>Tampilkan/Tidak</th>
                           <th></th>
                         </tr>
                       </thead>
@@ -157,19 +164,19 @@
                               Gambar {{i+1}}
                             </a>
                           </td>
-                          <!-- <td>{{photo}}</td> -->
+                          <td>
+                            <!-- Rounded switch -->
+                            <label class="switch">
+                              <input type="checkbox" [(ngModel)]="photo.status" (change)="updatePhotoStatus(photo._id, photo.status)" />
+                              <span class="slider round"></span>
+                            </label>
+                          </td>
                           <td>
                             <a class="btn btn-danger" (click)="deletePhoto(photo._id)">
                               <i class="fa fa-trash"></i>
                             </a>
                           </td>
-                          <td>
-                            <!-- Rounded switch -->
-                            <label class="switch">
-                              <input type="checkbox">
-                              <span class="slider round"></span>
-                            </label>
-                          </td>
+                         
                         </tr>
                       </tbody>
                     </table>
@@ -187,14 +194,6 @@
                       <h5>Tambahkan Foto baru pada Web</h5>
                     </div>
                     <div class="box-body">
-                      <div class="form-group">
-                        <div class="row input-row">
-                          <label for="videoTitle" class="col-sm-3 control-label">Judul Foto</label>
-                          <div class="col-sm-9">
-                            <input type="text" class="form-control" id="videoTitle" placeholder="Masukkan judul foto..." name="photoTitle" ngModel required>
-                          </div>
-                        </div>
-                      </div>
                       <div class="form-group">
                         <div class="row input-row">
                           <label for="photoUrl" class="col-sm-3 control-label">Link Foto</label>
