--- a/src/app/pages/admin-page/store/store.component.html
+++ b/src/app/pages/admin-page/store/store.component.html
@@ -99,11 +99,51 @@
     </div>
   </div>
 
+  
+  <div class="box">
+    <div class="box-header">
+      <h5>Daftar Pembeli Produk MPKMB Store</h5>
+    </div>
+
+    <div class="box-body table-responsive no-padding">
+      <div class="no-task" *ngIf="videosList?.length == 0">
+        <p>Tidak tugas video yang dapat ditampilkan saat ini.</p>
+      </div>
+      <table *ngIf="videosList?.length != 0" class="table table-hover">
+        <thead>
+          <tr>
+            <th>No</th>
+            <th>Judul Video</th>
+            <th>Tampilkan/Tidak</th>
+            <th></th>                          
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let video of videosList; let i = index">
+            <td>{{i+1}}</td>
+            <td>
+              <a href="https://youtube.com/watch?v={{video.url}}">
+                {{video.title}}
+              </a>
+            </td>
+            <td>
+              <!-- Rounded switch -->
+              <label class="switch">
+                <input type="checkbox" [(ngModel)]="video.status" (change)="updateVideoStatus(video._id, video.status)" />
+                <span class="slider round"></span>
+              </label>
+            </td>
+            <td>
+              <a class="btn btn-danger" (click)="deleteVideo(video._id)">
+                <i class="fa fa-trash"></i>
+              </a>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
 </section>
 <!-- /.content -->
 
-<section class="content-header">
-  <h1>
-    Daftar Pembeli
-  </h1>
-</section>
