--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import url(~bootstrap/dist/css/bootstrap.min.css);
+@import url(~bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css);
+
 @import url(~font-awesome/css/font-awesome.min.css);
 @import url(~ionicons/dist/css/ionicons.min.css);
 @import url(~jvectormap/jquery-jvectormap.css);
