--- a/src/app/pages/admin-page/dashboard/dashboard.component.html
+++ b/src/app/pages/admin-page/dashboard/dashboard.component.html
@@ -109,7 +109,7 @@
 
               <div class="col-md-7">
                 <div class="box-body table-responsive no-padding">
-                  <table class="table table-hover">
+                  <table *ngIf="eventList != null" class="table table-hover">
                     <thead>
                       <tr>
                         <th>No</th>
@@ -120,9 +120,6 @@
                       </tr>
                     </thead>
                     <tbody>
-                      <div style="text-align: center" *ngIf="eventList?.length == 0">
-                        <p>Tidak ada kegiatan yang dapat ditampilkan saat ini.</p>
-                      </div>
                       <tr *ngFor="let event of eventList; let i = index">
                         <td>{{i+1}}</td>
                         <td>{{event.title}}</td>
@@ -136,6 +133,9 @@
                       </tr>
                     </tbody>
                   </table>
+                  <div style="text-align: center" *ngIf="eventList?.length == 0">
+                    <p>Tidak ada kegiatan yang dapat ditampilkan saat ini.</p>
+                  </div>
                 </div>
               </div>
   
