--- a/src/app/pages/admin-page/news/news.component.html
+++ b/src/app/pages/admin-page/news/news.component.html
@@ -42,9 +42,9 @@
         </thead>
         <tbody>
           <tr *ngFor="let news of newsList; let i = index">
-            <td>{{i+1}}</td>
+            <td [routerLink]="['/admin/berita-detail', news._id]">{{i+1}}</td>
             <td [routerLink]="['/admin/berita-detail', news._id]">{{news.title}}</td>
-            <td>{{news.summary}}</td>
+            <td [routerLink]="['/admin/berita-detail', news._id]">{{news.summary}}</td>
             <td>
               <a class="btn btn-danger" (click)="deleteNews(news._id)">
                 <i class="fa fa-trash"></i>
