timeline edit added

--- a/src/app/pages/admin-page/dashboard/dashboard.component.html
+++ b/src/app/pages/admin-page/dashboard/dashboard.component.html
@@ -125,6 +125,9 @@
                           <a class="btn btn-danger" style="cursor: pointer;" (click)="deleteTimeline(event._id)">
                             <i class="fa fa-trash"></i>
                           </a>
+                          <a class="btn btn-success" style="cursor: pointer;" (click)="editTimeline(event._id)">
+                            <i class="fa fa-edit"></i>
+                          </a>
                         </td>
                       </tr>
                     </tbody>
