add download file

--- a/src/app/pages/admin-page/gallery/gallery.component.html
+++ b/src/app/pages/admin-page/gallery/gallery.component.html
@@ -202,10 +202,17 @@
                           </div>
                         </div>
                       </div>
-                      <select class="form-control" name="categoryId" ngModel required>
-                        <option *ngFor="let category of categoriesList" value="category._id">{{category.name}}</option>
-                        <option *ngIf="!categoriesList">Anda belum menambahkan Kategori.</option>                        
-                      </select>
+                      <div class="form-group">
+                        <div class="row input-row">
+                          <label for="categoryOption" class="col-sm-3 control-label">Kategori</label>
+                          <div class="col-sm-9">
+                            <select id="categoryOption" class="form-control" name="categoryId" ngModel required>
+                              <option *ngFor="let category of categoriesList" value="category._id">{{category.name}}</option>
+                              <option *ngIf="!categoriesList">Anda belum menambahkan Kategori.</option>                        
+                            </select>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                     <div class="box-footer">
                       <button  class="btn btn-success pull-right">Tambah Foto</button>
