--- a/src/app/pages/admin-page/store/store.component.html
+++ b/src/app/pages/admin-page/store/store.component.html
@@ -40,6 +40,9 @@
                   <a class="btn btn-danger" (click)="deleteGoods(good._id)">
                     <i class="fa fa-trash"></i>
                   </a>
+                  <a class="btn btn-success" style="cursor: pointer;" (click)="editGoods(good._id)">
+                    <i class="fa fa-edit"></i>
+                  </a>
                 </td>
               </tr>
             </tbody>
@@ -102,7 +105,14 @@
   
   <div class="box">
     <div class="box-header">
-      <h5>Daftar Pembeli Produk MPKMB Store</h5>
+      <div class="row">
+        <div class="col-md-6">
+          <h5>Daftar Pembeli Produk MPKMB Store</h5>
+        </div>
+        <div class="col-md-6">
+          <button class="btn btn-warning pull-right" (click)="orderListDownload()">Unduh data pemesanan</button>
+        </div>
+      </div>
     </div>
 
     <div class="box-body table-responsive no-padding">
