--- a/src/app/pages/admin-page/task/group-task/group-task.component.html
+++ b/src/app/pages/admin-page/task/group-task/group-task.component.html
@@ -26,7 +26,7 @@
                 <td>{{i+1}}</td>
                 <td>{{task.title}}</td>
                 <td>
-                  <a class="btn btn-danger" (click)="deleteTask(task._id)">
+                  <a style="cursor: pointer;" class="btn btn-danger" (click)="deleteTask(task._id)">
                     <i class="fa fa-trash"></i>
                   </a>
                 </td>
