--- a/src/app/pages/admin-page/news/newsdetail/newsdetail.component.html
+++ b/src/app/pages/admin-page/news/newsdetail/newsdetail.component.html
@@ -22,8 +22,7 @@
         <!-- <div class="col-md-6"> -->
           <h3 class="box-title" *ngIf="newsDetail != null">{{newsDetail?.title}}</h3>
           <div class="box-tools pull-right">
-            <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
-            </button>
+            <button type="submit" class="btn btn-success pull-right">Sunting Berita</button>
           </div>   
         <!-- </div> -->
 
