--- a/src/app/pages/admin-page/store/store.component.html
+++ b/src/app/pages/admin-page/store/store.component.html
@@ -110,7 +110,7 @@
           <h5>Daftar Pembeli Produk MPKMB Store</h5>
         </div>
         <div class="col-md-6">
-          <button class="btn btn-warning pull-right" (click)="orderListDownload()">Unduh data pemesanan</button>
+          <!-- <button class="btn btn-warning pull-right" (click)="orderListDownload()">Unduh data pemesanan</button> -->
         </div>
       </div>
     </div>
