--- a/src/app/pages/admin-page/gallery/gallery.component.html
+++ b/src/app/pages/admin-page/gallery/gallery.component.html
@@ -27,6 +27,27 @@
               <button type="submit" class="btn btn-success pull-right">Tambah Kategori</button>
             </form>
           </div>
+          <div class="col-md-6">
+            <div class="box-body table-responsive no-padding">
+              <div class="no-task" *ngIf="photosList?.length == 0">
+                <p>Tidak foto yang dapat ditampilkan saat ini.</p>
+              </div>
+              <table *ngIf="photosList?.length != 0" class="table table-hover">
+                <thead>
+                  <tr>
+                    <th>No</th>
+                    <th>Nama Kategori</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let category of categoriesList; let i = index">
+                    <td>{{i+1}}</td>
+                    <td>{{category.name}}</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
         </div>
        
       </div>
@@ -46,7 +67,7 @@
           <div class="tab-pane" [class.active]="viewTab == 'tab1'" id="tab_1" *ngSwitchCase="'tab1'">
 
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-7">
           
                 <div class="box">
                   <div class="box-header">
@@ -61,7 +82,7 @@
                       <thead>
                         <tr>
                           <th>No</th>
-                          <th>Judul Video</th>
+                          <th>Video</th>
                           <th>Tampilkan/Tidak</th>
                           <th></th>                          
                         </tr>
@@ -70,9 +91,9 @@
                         <tr *ngFor="let video of videosList; let i = index">
                           <td>{{i+1}}</td>
                           <td>
-                            <a href="https://youtube.com/watch?v={{video.url}}">
-                              {{video.title}}
-                            </a>
+                            <iframe [src]="video.url | safe">
+                              <p>Your browser does not support iframes.</p>
+                            </iframe>
                           </td>
                           <td>
                             <!-- Rounded switch -->
@@ -94,7 +115,7 @@
                   
               </div>
           
-              <div class="col-md-6">
+              <div class="col-md-5">
           
                 <div class="box">
                   
