--- a/src/app/pages/admin-page/news/newsdetail/newsdetail.component.html
+++ b/src/app/pages/admin-page/news/newsdetail/newsdetail.component.html
@@ -22,7 +22,8 @@
         <!-- <div class="col-md-6"> -->
           <h3 class="box-title" *ngIf="newsDetail != null">{{newsDetail?.title}}</h3>
           <div class="box-tools pull-right">
-            <button type="submit" class="btn btn-success pull-right" (click)="editNews()">Sunting Berita</button>
+            <!-- <button type="submit" class="btn btn-success pull-right" (click)="editNews()">Sunting Berita</button> -->
+            <button type="submit" class="btn btn-success pull-right">Sunting Berita</button>
           </div>   
         <!-- </div> -->
 
